--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,8 +36,12 @@
             {{/this}}
         </section>
         <section>
-            <h2>체스 form</h2>
-            <form enctype="text/plain"></form>
+            <form action="/move" method="post" enctype="text/plain">
+                <label>위치
+                    <input name="command" type="text" placeholder="a1,a2" value="a1,a2"/>
+                </label>
+                <input type="submit" value="제출"/>
+            </form>
         </section>
     </div>
 </body>
